cmake_minimum_required(VERSION 3.15)
project(cryptopp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(cryptopp
        TestPrograms/dump2def.cxx
        TestPrograms/test_32bit.cxx
        TestPrograms/test_64bit.cxx
        TestPrograms/test_arm_acle.cxx
        TestPrograms/test_arm_aes.cxx
        TestPrograms/test_arm_asimd.cxx
        TestPrograms/test_arm_crc.cxx
        TestPrograms/test_arm_neon.cxx
        TestPrograms/test_arm_pmull.cxx
        TestPrograms/test_arm_sha1.cxx
        TestPrograms/test_arm_sha256.cxx
        TestPrograms/test_arm_sha3.cxx
        TestPrograms/test_arm_sha512.cxx
        TestPrograms/test_arm_sm3.cxx
        TestPrograms/test_arm_sm4.cxx
        TestPrograms/test_asm_mixed.cxx
        TestPrograms/test_cxx.cxx
        TestPrograms/test_cxx11.cxx
        TestPrograms/test_cxx17.cxx
        TestPrograms/test_glibc.cxx
        TestPrograms/test_newlib.cxx
        TestPrograms/test_ppc_aes.cxx
        TestPrograms/test_ppc_altivec.cxx
        TestPrograms/test_ppc_power7.cxx
        TestPrograms/test_ppc_power8.cxx
        TestPrograms/test_ppc_power9.cxx
        TestPrograms/test_ppc_sha.cxx
        TestPrograms/test_ppc_vmull.cxx
        TestPrograms/test_pthreads.cxx
        TestPrograms/test_x86_aes.cxx
        TestPrograms/test_x86_avx.cxx
        TestPrograms/test_x86_avx2.cxx
        TestPrograms/test_x86_avx512.cxx
        TestPrograms/test_x86_clmul.cxx
        TestPrograms/test_x86_cpuid.cxx
        TestPrograms/test_x86_rdrand.cxx
        TestPrograms/test_x86_rdseed.cxx
        TestPrograms/test_x86_sha.cxx
        TestPrograms/test_x86_sse2.cxx
        TestPrograms/test_x86_sse3.cxx
        TestPrograms/test_x86_sse41.cxx
        TestPrograms/test_x86_sse42.cxx
        TestPrograms/test_x86_ssse3.cxx
        TestScripts/cryptest-coverity.cpp
        3way.cpp
        3way.h
        adler32.cpp
        adler32.h
        adv_simd.h
        aes.h
        aes_armv4.h
        algebra.cpp
        algebra.h
        algparam.cpp
        algparam.h
        allocate.cpp
        allocate.h
        arc4.cpp
        arc4.h
        argnames.h
        aria.cpp
        aria.h
        aria_simd.cpp
        ariatab.cpp
        arm_simd.h
        asn.cpp
        asn.h
        authenc.cpp
        authenc.h
        base32.cpp
        base32.h
        base64.cpp
        base64.h
        basecode.cpp
        basecode.h
        bench.h
        bench1.cpp
        bench2.cpp
        bench3.cpp
        bfinit.cpp
        blake2.cpp
        blake2.h
        blake2b_simd.cpp
        blake2s_simd.cpp
        blowfish.cpp
        blowfish.h
        blumshub.cpp
        blumshub.h
        camellia.cpp
        camellia.h
        cast.cpp
        cast.h
        casts.cpp
        cbcmac.cpp
        cbcmac.h
        ccm.cpp
        ccm.h
        chacha.cpp
        chacha.h
        chacha_avx.cpp
        chacha_simd.cpp
        chachapoly.cpp
        chachapoly.h
        cham.cpp
        cham.h
        cham_simd.cpp
        channels.cpp
        channels.h
        cmac.cpp
        cmac.h
        config.h
        config_align.h
        config_asm.h
        config_cpu.h
        config_cxx.h
        config_dll.h
        config_int.h
        config_misc.h
        config_ns.h
        config_os.h
        config_ver.h
        cpu.cpp
        cpu.h
        crc.cpp
        crc.h
        crc_simd.cpp
        cryptlib.cpp
        cryptlib.h
        darn.cpp
        darn.h
        datatest.cpp
        default.cpp
        default.h
        des.cpp
        des.h
        dessp.cpp
        dh.cpp
        dh.h
        dh2.cpp
        dh2.h
        dll.cpp
        dll.h
        dlltest.cpp
        dmac.h
        donna.h
        donna_32.cpp
        donna_32.h
        donna_64.cpp
        donna_64.h
        donna_sse.cpp
        donna_sse.h
        drbg.h
        dsa.cpp
        dsa.h
        eax.cpp
        eax.h
        ec2n.cpp
        ec2n.h
        eccrypto.cpp
        eccrypto.h
        ecp.cpp
        ecp.h
        ecpoint.h
        elgamal.cpp
        elgamal.h
        emsa2.cpp
        emsa2.h
        eprecomp.cpp
        eprecomp.h
        esign.cpp
        esign.h
        factory.h
        fhmqv.h
        files.cpp
        files.h
        filters.cpp
        filters.h
        fips140.cpp
        fips140.h
        fipsalgt.cpp
        fipstest.cpp
        fltrimpl.h
        gcm.cpp
        gcm.h
        gcm_simd.cpp
        gf256.cpp
        gf256.h
        gf2_32.cpp
        gf2_32.h
        gf2n.cpp
        gf2n.h
        gf2n_simd.cpp
        gfpcrypt.cpp
        gfpcrypt.h
        gost.cpp
        gost.h
        gzip.cpp
        gzip.h
        hashfwd.h
        hc128.cpp
        hc128.h
        hc256.cpp
        hc256.h
        hex.cpp
        hex.h
        hight.cpp
        hight.h
        hkdf.h
        hmac.cpp
        hmac.h
        hmqv.h
        hrtimer.cpp
        hrtimer.h
        ida.cpp
        ida.h
        idea.cpp
        idea.h
        integer.cpp
        integer.h
        iterhash.cpp
        iterhash.h
        kalyna.cpp
        kalyna.h
        kalynatab.cpp
        keccak.cpp
        keccak.h
        keccak_core.cpp
        keccak_simd.cpp
        lea.cpp
        lea.h
        lea_simd.cpp
        lubyrack.h
        luc.cpp
        luc.h
        mars.cpp
        mars.h
        marss.cpp
        md2.cpp
        md2.h
        md4.cpp
        md4.h
        md5.cpp
        md5.h
        mdc.h
        mersenne.h
        misc.cpp
        misc.h
        modarith.h
        modes.cpp
        modes.h
        modexppc.h
        mqueue.cpp
        mqueue.h
        mqv.cpp
        mqv.h
        naclite.h
        nbtheory.cpp
        nbtheory.h
        neon_simd.cpp
        nr.h
        oaep.cpp
        oaep.h
        oids.h
        osrng.cpp
        osrng.h
        ossig.h
        padlkrng.cpp
        padlkrng.h
        panama.cpp
        panama.h
        pch.cpp
        pch.h
        pkcspad.cpp
        pkcspad.h
        poly1305.cpp
        poly1305.h
        polynomi.cpp
        polynomi.h
        ppc_power7.cpp
        ppc_power8.cpp
        ppc_power9.cpp
        ppc_simd.cpp
        ppc_simd.h
        pssr.cpp
        pssr.h
        pubkey.cpp
        pubkey.h
        pwdbased.h
        queue.cpp
        queue.h
        rabbit.cpp
        rabbit.h
        rabin.cpp
        rabin.h
        randpool.cpp
        randpool.h
        rc2.cpp
        rc2.h
        rc5.cpp
        rc5.h
        rc6.cpp
        rc6.h
        rdrand.cpp
        rdrand.h
        rdtables.cpp
        regtest1.cpp
        regtest2.cpp
        regtest3.cpp
        regtest4.cpp
        resource.h
        rijndael.cpp
        rijndael.h
        rijndael_simd.cpp
        ripemd.cpp
        ripemd.h
        rng.cpp
        rng.h
        rsa.cpp
        rsa.h
        rw.cpp
        rw.h
        safer.cpp
        safer.h
        salsa.cpp
        salsa.h
        scrypt.cpp
        scrypt.h
        seal.cpp
        seal.h
        secblock.h
        secblockfwd.h
        seckey.h
        seed.cpp
        seed.h
        serpent.cpp
        serpent.h
        serpentp.h
        sha.cpp
        sha.h
        sha1_armv4.h
        sha256_armv4.h
        sha3.cpp
        sha3.h
        sha512_armv4.h
        sha_simd.cpp
        shacal2.cpp
        shacal2.h
        shacal2_simd.cpp
        shake.cpp
        shake.h
        shark.cpp
        shark.h
        sharkbox.cpp
        simeck.cpp
        simeck.h
        simeck_simd.cpp
        simon.cpp
        simon.h
        simon128_simd.cpp
        simon64_simd.cpp
        simple.cpp
        simple.h
        siphash.h
        skipjack.cpp
        skipjack.h
        sm3.cpp
        sm3.h
        sm4.cpp
        sm4.h
        sm4_simd.cpp
        smartptr.h
        sosemanuk.cpp
        sosemanuk.h
        speck.cpp
        speck.h
        speck128_simd.cpp
        speck64_simd.cpp
        square.cpp
        square.h
        squaretb.cpp
        sse_simd.cpp
        stdcpp.h
        strciphr.cpp
        strciphr.h
        tea.cpp
        tea.h
        test.cpp
        tftables.cpp
        threefish.cpp
        threefish.h
        tiger.cpp
        tiger.h
        tigertab.cpp
        trap.h
        trunhash.h
        ttmac.cpp
        ttmac.h
        tweetnacl.cpp
        tweetnacl.h
        twofish.cpp
        twofish.h
        validat0.cpp
        validat1.cpp
        validat10.cpp
        validat2.cpp
        validat3.cpp
        validat4.cpp
        validat5.cpp
        validat6.cpp
        validat7.cpp
        validat8.cpp
        validat9.cpp
        validate.h
        vmac.cpp
        vmac.h
        wake.cpp
        wake.h
        whrlpool.cpp
        whrlpool.h
        words.h
        xed25519.cpp
        xed25519.h
        xtr.cpp
        xtr.h
        xtrcrypt.cpp
        xtrcrypt.h
        xts.cpp
        xts.h
        zdeflate.cpp
        zdeflate.h
        zinflate.cpp
        zinflate.h
        zlib.cpp
        zlib.h)
